# slack_rust

./: .gitignore  Cargo.toml  README.md  build.sh
config/: slack_config.example.json
src/: app.rs  commands.rs  config.rs  formatting.rs  main.rs  persistence.rs  slack.rs  split_view.rs  utils.rs  widgets.rs
